# E-Commerce

./: .gitignore  README.md  compose.yaml  main.py  pyproject.toml
database/: redis.py  sql.py
ecommerce/: __main__.py  config.py
ecommerce/core/domain/: product.py
ecommerce/core/interfaces/routers/: __init__.py
ecommerce/core/interfaces/routers/admins/: admin.py
ecommerce/core/interfaces/routers/public/: user.py
ecommerce/core/interfaces/schema/users/: user.py
ecommerce/core/models/: __init__.py  products.py
ecommerce/database/: sql.py
ecommerce/infrastructure/database/: redis.py
ecommerce/infrastructure/models/: __init__.py  admin.py  products.py  restrict_paths.py  user.py
ecommerce/interfaces/middleware/: refresh_session.py
ecommerce/interfaces/routers/: __init__.py
ecommerce/interfaces/routers/admins/: admin.py
ecommerce/interfaces/routers/admins/products/: register.py
ecommerce/interfaces/routers/public/: user.py
ecommerce/media/: README.md  __init__.py
ecommerce/models/: __init__.py  admin.py  products.py  restrict_paths.py  user.py
ecommerce/routers/: __init__.py
ecommerce/routers/admins/: admin.py
ecommerce/routers/users/: user.py
ecommerce/routers/users/public/: user.py
ecommerce/schema/users/: user.py
ecommerce/utils/: __init__.py
middleware/: refresh_session.py
models/: __init__.py  admin.py  products.py  user.py
routers/: __init__.py
routers/admins/: admin.py
routers/users/: user.py
