[project]
name = "ecommerce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.2.1",
    "fastapi>=0.115.5",
    "jinja2>=3.1.4",
    "psycopg2-binary>=2.9.10",
    "redis>=5.2.0",
    "sqlalchemy>=2.0.36",
    "uvicorn[standart]>=0.32.1",
]
