[project]
name = "ecommerce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "bcrypt>=4.2.1",
    "boto3>=1.35.83",
    "email-validator>=2.2.0",
    "fastapi>=0.115.5",
    "jinja2>=3.1.4",
    "oci>=2.141.0",
    "psycopg2-binary>=2.9.10",
    "python-multipart>=0.0.19",
    "redis>=5.2.0",
    "sqlalchemy>=2.0.36",
    "ulid>=1.1",
    "uvicorn[standart]>=0.32.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-sugar>=1.0.0",
    "taskipy>=1.14.0",
    "ruff>=0.7.2",
    "pytest-cov>=6.0.0",
]

[tool.taskipy.tasks]
lint = "ruff check . && ruff . --diff"
format = "ruff check . --fix && ruff format ."
pre_dev = "docker compose up -d"
dev = "uvicorn ecommerce.__main__:app --reload"

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.lint]
select = ["F", "W", "E", "I", "RET", "R", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
